[package]
name = "rust_im"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-util = { version = "0.7.19", features = ["codec"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = "0.18"
tungstenite = "0.19"
dashmap = "5.5"
prost-types = "0.12"
rdkafka = { version = "0.36", features = ["cmake-build"] }
bytes = "1.12.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
futures = { version = "0.3.33", features = ["std"] }
futures-util = "0.3.33"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.12"
